# tellypy

./: LICENSE  README.md  pyproject.toml
src/tellypy/: __init__.py  client.py  kinds.py  protocols.py  types.py
